--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
           package="com.ktu.nearfuel">
 
     <application
-            android:name=".views.base.BaseApplication"
+            android:name="com.ktu.nearfuel.base.BaseApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
