--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,8 @@ apply plugin: 'kotlin-android-extensions'
 
 apply plugin: "androidx.navigation.safeargs.kotlin"
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -45,5 +47,34 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
     implementation project(":components")
+
+    implementation "com.google.dagger:dagger:2.14.1"
+    kapt "com.google.dagger:dagger-compiler:2.14.1"
+    compileOnly "org.glassfish:javax.annotation:3.1.1"
+
+    //RETROFIT ...  NETWORK LIBRARY
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    // RETROFIT .. CONVERTER
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
+
+//    implementation 'com.google.dagger:dagger:2.15'
+//    kapt 'com.google.dagger:dagger-compiler:2.15'
+/*
+      OkHttp dependency
+     */
+    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
+    implementation "com.google.dagger:dagger:$dagger2Version"
+    kapt "com.google.dagger:dagger-compiler:$dagger2Version"
+    compile 'com.google.dagger:dagger-android-support:2.11'
+    kapt 'com.google.dagger:dagger-android-processor:2.11'// if you use the support libraries
+    //implementation "com.google.dagger:dagger-android-support:$dagger2Version"
+
+    implementation "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttpVersion"
+
 
 }
