--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 
 buildscript {
     ext.kotlin_version = '1.3.21'
+    ext.retrofit_version = '2.4.0'
+    ext.dagger2Version = '2.1.1'
+    ext.okhttpVersion="3.10.0"
     repositories {
         google()
         jcenter()
