--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,8 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
 
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+
     //Nice stuff
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:x.x.x"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:x.x.x"
