--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.ktu.nearfuel"
+        multiDexEnabled true
         minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
@@ -32,6 +33,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
     implementation 'androidx.core:core-ktx:1.1.0-alpha04'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.android.support:multidex:1.0.3'
 //    implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
@@ -89,5 +91,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:x.x.x"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:x.x.x"
 
+    //Firebase
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+
 
 }
+
+apply plugin: 'com.google.gms.google-services'
