--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,8 @@ dependencies {
 
     //Firebase
     implementation 'com.google.firebase:firebase-core:16.0.9'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
+
 
 
 }
