--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,15 +30,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
+    implementation 'androidx.core:core-ktx:1.1.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.android.support:multidex:1.0.3'
 //    implementation 'com.android.support:design:28.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+    androidTestImplementation 'androidx.test:runner:1.2.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-beta01'
     implementation 'com.google.android.material:material:1.0.0'
 
     def nav_version = "2.0.0"
@@ -71,7 +71,7 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
     implementation "com.google.dagger:dagger:$dagger2Version"
     kapt "com.google.dagger:dagger-compiler:$dagger2Version"
-    compile 'com.google.dagger:dagger-android-support:2.11'
+    implementation 'com.google.dagger:dagger-android-support:2.11'
     kapt 'com.google.dagger:dagger-android-processor:2.11'// if you use the support libraries
     //implementation "com.google.dagger:dagger-android-support:$dagger2Version"
 
@@ -80,7 +80,7 @@ dependencies {
 
     def room_version = "2.1.0-alpha06"
 
-    implementation "androidx.room:room-runtime:2.1.0-alpha06"
+    implementation "androidx.room:room-runtime:2.1.0-alpha07"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
