--- a/components/build.gradle
+++ b/components/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     //Gson
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.firebase:firebase-auth:17.0.0'
 }
 repositories {
     mavenCentral()
