--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.9'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
 
+    //Facebook login only
+    implementation 'com.facebook.android:facebook-login:4.33.0'
 
 
 }
