--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,8 +50,6 @@ dependencies {
 
     implementation project(":components")
 
-    implementation "com.google.dagger:dagger:2.14.1"
-    kapt "com.google.dagger:dagger-compiler:2.14.1"
     compileOnly "org.glassfish:javax.annotation:3.1.1"
 
     //RETROFIT ...  NETWORK LIBRARY
@@ -63,27 +61,27 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation "com.squareup.retrofit2:adapter-rxjava:$retrofit_version"
 
-//    implementation 'com.google.dagger:dagger:2.15'
-//    kapt 'com.google.dagger:dagger-compiler:2.15'
-/*
-      OkHttp dependency
-     */
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
-    implementation "com.google.dagger:dagger:$dagger2Version"
-    kapt "com.google.dagger:dagger-compiler:$dagger2Version"
-    implementation 'com.google.dagger:dagger-android-support:2.11'
-    kapt 'com.google.dagger:dagger-android-processor:2.11'// if you use the support libraries
-    //implementation "com.google.dagger:dagger-android-support:$dagger2Version"
-
     implementation "com.squareup.okhttp3:okhttp:$rootProject.okhttpVersion"
     implementation "com.squareup.okhttp3:logging-interceptor:$rootProject.okhttpVersion"
 
+    //Dagger2
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger2Version"
+    implementation "com.google.dagger:dagger:$dagger2Version"
+    implementation "com.google.dagger:dagger-android:$dagger2Version"
+    implementation "com.google.dagger:dagger-android-support:$dagger2Version"
+    kapt "com.google.dagger:dagger-android-processor:$dagger2Version"
+    kapt "com.google.dagger:dagger-compiler:$dagger2Version"
+
+
+    //ROOM
     def room_version = "2.1.0-alpha06"
 
     implementation "androidx.room:room-runtime:2.1.0-alpha07"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
+
+    //Lifecycle
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
 
