--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,8 @@ dependencies {
     //Facebook login only
     implementation 'com.facebook.android:facebook-login:4.33.0'
 
+    //Location
+    implementation "com.google.android.gms:play-services-location:16.0.0"
 
 }
 
