--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".views.activities.AuthenticationActivity"/>
+        <activity android:name=".login.views.AuthenticationActivity"/>
     </application>
 
 </manifest>
