--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,10 @@ dependencies {
 
     def nav_version = "2.0.0"
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version" // For Kotlin use navigation-fragment-ktx
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version" // For Kotlin use navigation-ui-ktx
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    // For Kotlin use navigation-fragment-ktx
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    // For Kotlin use navigation-ui-ktx
 
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
 
