--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,10 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "CLIENT_ID", "\"testClientId\""
+        buildConfigField "String", "CLIENT_SECRET", "\"testClientSecret\""
+        buildConfigField "String", "CLIENT_AUTH", "\"Basic dGVzdENsaWVudElkOnRlc3RDbGllbnRTZWNyZXQ=\""
+
     }
     buildTypes {
         release {
@@ -25,11 +29,24 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    flavorDimensions "main"
+    productFlavors {
+        localhost {
+            dimension "main"
+            buildConfigField "String", "BASE_URL", "\"http://10.0.2.2:5000/\""
+        }
+
+        heroku {
+            dimension "main"
+            buildConfigField "String", "BASE_URL", "\"https://damp-citadel-37160.herokuapp.com/\""
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation 'androidx.core:core-ktx:1.1.0-beta01'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
